# inbreeze

./: .directory  .envrc  .gitignore  CHANGELOG.md  CNAME  Cargo.toml  Dioxus.toml  LICENSE  README.md  README.org  flake.nix  index.html  manifest.json  netlify.toml  pubspec.yaml  shell.nix  snapcraft.yaml  styles.css  update_metadata.sh
.github/: FUNDING.yml
.github/workflows/: flutter_apk_build.yml  flutter_build_release.yml  flutter_web_deploy.yml  netlify_web_deploy.yml
.idx/: dev.nix
android/: build.gradle
android/app/: build.gradle
assets/: manifest.json
assets/cards/: ice_water.webp.br
assets/styles/: home.css  main.css  module_grid.css  module_selector.css  nav.css  practice.css  progress.css  splash.css  top_nav.css
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_state.dart  main.dart  platform_checker.dart  router.dart  timer.dart  window_manager_stub.dart
lib/components/: animated_circle.dart  breathing_circle.dart  stopwatch.dart
lib/i18n/: de_DE.json  en_US.json  es_ES.json  fr_FR.json  id_ID.json  it_IT.json  ru_RU.json  zh_CN.json
lib/layouts/: guide_page_layout.dart
linux/: CMakeLists.txt  my_application.cc
locales/: de.yaml  en.yaml
metadata/: io.naox.InnerBreeze.metainfo.xml
practices/: surya_namaskar_basic.yaml  whm_basic.yaml
privacy-policy/: index.html
snap/: io.naox.InnerBreeze.metainfo.xml  snapcraft.yaml
src/: app.rs  main.rs  routes.rs  theme.rs  utils.rs
src/data/: mod.rs  (+1 more)
test/: widget_test.dart
web/: flutter_bootsrap.js  index.html  manifest.json
windows/: CMakeLists.txt
(+139 files in other folders)
