[package]
name = "inbreeze"
version = "0.1.0"
authors = ["M. Schiller <hello@waozi.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.dioxus]
[package.metadata.dioxus.web]
asset-dir = "assets"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
once_cell = "1.17.1"
dioxus-logger = "0.5.1"
log = "0.4.6"
manganis = "0.2.2" 
futures-util = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.5", features = ["desktop", "router"] }
tokio = { version = "1.0", features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
futures-channel = "0.3"
web-sys = { version = "0.3", features = ["Window"] }
wasm-bindgen = "0.2"
gloo-timers = { version = "0.3", features = ["futures"]}